src/test/ui/const-generics/incorrect-number-of-const-args.min.stderr
error[E0107]: wrong number of const arguments: expected 2, found 1
  --> $DIR/incorrect-number-of-const-args.rs:11:5
   |
LL |     foo::<0>();
   |     ^^^^^^^^ expected 2 const arguments

error[E0107]: wrong number of const arguments: expected 2, found 3
  --> $DIR/incorrect-number-of-const-args.rs:12:17
   |
LL |     foo::<0, 0, 0>();
   |                 ^ unexpected const argument

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0107`.
